force-app/main/default/objects/Trading_Reference__c/Trading_Reference__c.object-meta.xml
<CustomObject>
    <label>Trading Reference</label>
    <nameField>
        <label>Trading Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trading Reference</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>