force-app/main/default/objects/Trading_Reference__c/fields/Accounts_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Email_Address__c</fullName>
    <label>Accounts Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>