force-app/main/default/objects/Trading_Reference__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>